[package]
name = "iota-mam"
version = "0.1.0"
authors = ["Andreas C. Osowski <andreas@osowski.de>", "Paul D Handy <paul.d.handy@gmail.com>"]
keywords = ["no_std"]

[dependencies]
iota-pascal = { path = "../pascal" }

[dependencies.iota-merkle]
git = "https://github.com/RANDOME-BAIG/iota.legacy.rs.git"

[dependencies.iota-curl]
git = "https://github.com/RANDOME-BAIG/iota.legacy.rs.git"

[dependencies.iota-sign]
git = https://github.com/RANDOME-BAIG/iota.legacy.rs.git"

[dependencies.iota-tmath]
git = "https://github.com/RANDOME-BAIG/iota.legacy.rs.git"

[dependencies.iota-trytes]
git = "hhttps://github.com/RANDOME-BAIG/iota.legacy.rs.git"

[dev-dependencies.iota-trytes]
git = "https://github.com/RANDOME-BAIG/iota.legacy.rs.git"
features = ["alloc"]

[dev-dependencies.iota-curl-cpu]
git = "https://github.com/RANDOME-BAIG/iota.legacy.rs.git"


[features]
default = [ ]
